# dfs2

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
plugins/: README.md  replace_origin.js  version_provider_cnb.js  version_provider_github.js  version_provider_gitlab.js
src/: app_state.rs  cache.rs  challenge.rs  config.rs  container.rs  data_store.rs  docs.rs  error.rs  legacy_client.rs  lib.rs  main.rs  metrics.rs  models.rs  redis_data_store.rs  responses.rs  validation.rs
src/analytics/: cleanup_task.rs  mod.rs  models.rs  session_logger.rs
src/commands/: mod.rs
src/commands/analyze/: analyzer.rs  mod.rs  models.rs  parser.rs
src/commands/prometheus_config/: mod.rs
src/commands/rclone_config/: mod.rs
src/modules/: geolocation.rs  mod.rs  qjs.rs
src/modules/analytics/: cleanup_task.rs  mod.rs  models.rs  session_logger.rs
src/modules/auth/: challenge.rs  mod.rs
src/modules/flow/: config.rs  mod.rs  runner.rs
src/modules/network/: mod.rs  real_connect_info.rs
src/modules/server/: dfs_node.rs  git_lfs.rs  mod.rs  s3.rs
src/modules/storage/: cache.rs  data_store.rs  mod.rs  redis_data_store.rs
src/modules/version_provider/: cache.rs  changelog_tests.rs  mod.rs  plugin_provider.rs  tests.rs  updater.rs
src/routes/: health.rs  mgmt.rs  mod.rs  resource.rs  static_files.rs  status.rs
src/routes/resource/: batch.rs  chunk.rs  downloads.rs  metadata.rs  mod.rs  sessions.rs
src/services/: bandwidth_cache_service.rs  challenge_service.rs  flow_service.rs  mod.rs  resource_service.rs  session_service.rs
src/tests/: builders.rs  mocks.rs  mod.rs
tests/: absolute_penalty_test.rs  flow_service_penalty_test.rs  penalty_test.rs  prefix_download_test.rs
tests/integration/: changelog_tests.rs
(+9 files in other folders)
