[package]
name = "dfs2"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
redis = { version = "0.32", features = ["r2d2", "tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "cookies",
    "stream",
    "rustls-tls",
] }
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.17", features = ["v4"] }
dotenv = "0.15"
lazy_static = "1.4"
anyhow = "1.0.98"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
hmac = "0.12"
sha2 = "0.10"
md5 = "0.8"
hex = "0.4"
time = { version = "0.3", features = ["formatting"] }
base64 = "0.22"
url = "2.5"
urlencoding = "2.1"
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.9.0", features = [
    "full-async",
    "rust-alloc",
    "macro",
    "parallel",
] }
llrt_modules = { git = "https://github.com/awslabs/llrt", version = "0.5.1-beta" }
thread_local = "1.1"
cidr = { version = "0.3.1", features = ["serde"] }
size = "0.5.0"
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9"
bytes = "1.10.1"
ipdb = "0.1.4"
prometheus = "0.14"
axum-prometheus = "0.8"
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
arc-swap = "1.6"
dashmap = "6.1.0"
jsonwebtoken = "9.3"

[dev-dependencies]
tempdir = "0.3"
tokio-test = "0.4"
